syntax = "proto3";

package io.harness.perpetualtask.datacollection;

option java_multiple_files = true;

message K8ActivityCollectionPerpetualTaskParams {
  string account_id = 1;
  string activity_source_config_id = 2;
  bytes data_collection_info = 3;
}
